# sbml-sh

./: .readthedocs.yaml  Development.md  Makefile  README.md  mm.mod  mm.xml  pyproject.toml
doc/: mod2sbml.tex
docs/: conf.py  index.rst  requirements.txt
docs/source/: modules.rst  sbmlsh.rst
mod2sbml/: Makefile  mod2sbmlWS.py  roundtrip.py  sbml-latex-extract.py  sbml2latex.py  sbml2mod.py  sbml2modWS.py
mod2sbml/doc/: Makefile  djwprefs.sty  mod2sbml.tex
mod2sbml/models/: BirthImDeath.mod  ImDeath.mod  MM.mod  cjp-test.mod
models/: ActTrans.mod  AutoReg-loc.mod  BirthDeath.mod  LV.mod  SH-Test.mod  SIR.mod
spec/: Makefile  sbml-sh.tex
src/sbmlsh/: __init__.py  mod2sbml.py  roundtrip.py  sbml-latex-extract.py  sbml2latex.py  sbml2mod.py
tests/: test_basic.py
