[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbmlsh"
version = "0.0.2"
authors = [
  { name="Darren Wilkinson", email="darrenjwilkinson@btinternet.com" },
]
description = "SBML-shorthand conversion tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "python-libsbml"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/darrenjw/sbml-sh"
Documentation = "https://sbmlsh.readthedocs.io/"
Issues = "https://github.com/darrenjw/sbml-sh/issues"

[project.scripts]
mod2sbml = "sbmlsh.mod2sbml:main"
sbml2mod = "sbmlsh.sbml2mod:main"

